--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -80,7 +80,7 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
 
-    name: SSH connection to Actions
+    - name: SSH connection to Actions
       uses: P3TERX/debugger-action@main
       if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
